시큐리티 기반 로그인 정보 api

--- a/src/main/resources/static/styles/main_page.css
+++ b/src/main/resources/static/styles/main_page.css
@@ -265,6 +265,28 @@
         /* margin-left: 70vw; */
         cursor: pointer;
     }   
+    
+  .logout-button {
+    /* Adjust margin to place it below the search box */
+    position: relative;
+    width:100px;
+    z-index: 2;
+    top: 75%;
+    left: -3%;
+    cursor: pointer;      
+    text-align: center;
+    padding: 10px;
+    background-color: #6666FF;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+    background-color: #3333FF;
+}
 }
 
 @media (min-width: 769px) {
@@ -398,5 +420,27 @@
         /* margin-left: 70vw; */
         cursor: pointer;
     }
+    
+.logout-button {
+    /* Adjust margin to place it below the search box */
+    position: relative;
+    width:100px;
+    z-index: 2;
+    top: 75%;
+    left: -3%;
+    cursor: pointer;      
+    text-align: center;
+    padding: 10px;
+    background-color: #6666FF;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+
+.logout-button:hover {
+    background-color: #3333FF;
+}
 
 }
