--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -3,8 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>회원가입</title>
-	<link rel="stylesheet" href="/static/styles/reset.css">
-	<link rel="stylesheet" href="/static/styles/join.css">
+		<link rel="icon" href="/static/non_auth_static/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="/static/non_auth_static/styles/reset.css">
+	<link rel="stylesheet" href="/static/non_auth_static/styles/join.css">
 </head>
 
 <body>
@@ -54,7 +55,7 @@
 	</footer>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="/static/js/join.js"></script>
+<script src="/static/non_auth_static/js/join.js"></script>
 </body>
 
 </html>
