--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>로그인</title>
-	<link rel="icon" href="/path/to/your/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="/static/styles/reset.css">
-	<link rel="stylesheet" href="/static/styles/login.css">
+	<link rel="icon" href="/static/non_auth_static/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="/static/non_auth_static/styles/reset.css">
+	<link rel="stylesheet" href="/static/non_auth_static/styles/login.css">
 </head>
 
 <body>
@@ -46,7 +46,7 @@
 	</footer>
 
 <script type="text/javascript" src="http://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="/static/js/login.js"></script>
+<script src="/static/non_auth_static/js/login.js"></script>
 </body>
 
 </html>
