--- a/src/main/resources/templates/view_details.html
+++ b/src/main/resources/templates/view_details.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
     <title>자세히 보기</title>
+    	<link rel="icon" href="/static/non_auth_static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/styles/view_details.css">
     <link rel="stylesheet" href="/static/styles/view_details_star.css">
     <script type="text/javascript"
@@ -111,10 +112,6 @@
                     <div id="reviews"></div>
                 </div>
                 <div class="review-prompt">
-                    <div class="prompt_id_pw" style="margin-bottom:10px;">
-                        <input type="text" id="username" placeholder="아이디" />
-                        <input type="password" id="password" placeholder="비밀번호" />
-                    </div>
                     <div class="prompt_write_submit">
                         <textarea type="text" id="reviewText" placeholder="리뷰를 남겨주세요!"></textarea>
                         <img src="/public/send.svg" id="submitReview" alt="리뷰 제출">
@@ -122,8 +119,9 @@
                     </div>
                     
                 </div>
-            </div>
+            </div>      
         </div>
+       
     </div>
 
 
