--- a/src/main/resources/templates/amend_information.html
+++ b/src/main/resources/templates/amend_information.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=0">
     <title>정보 수정 제안</title>
+    <link rel="icon" href="/static/non_auth_static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/static/styles/amend_information.css">
 </head>
 <body>
