--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,8 @@
                 <div><img src="/static/public/filter.png" id="filter"></div>
                 <div id="search-box">
                     <div class="search-container">
+                        <button type="button" id="show-all-button">검색 해제</button>
+                       
                         <img src="/static/public/search.svg" id="search-button">
                         <input type="text" id="keyword" class="search-input" placeholder="장소를 검색하세요">
                         <img src="/static/public/close_index_html.svg" id="close-button">
