--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,6 +13,10 @@
 	<div class="logo image">
 		<h1><a href="/">모두의 화장실</a></h1>
 	</div>
+	<div class="logo image">
+			<a style="font-size: 22px;">로그인</a>	
+	</div>
+	<br>
 	<div class="footer">
 		<div class="footer-info">
 			<span>로그인 후 이용 가능합니다.</span>
