--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -91,7 +91,7 @@ input[type="file"] {
 		</div>
 	</footer>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="/static/non_auth_static/js/join.js"></script>
 </body>
 
