--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -49,7 +49,7 @@
 		</div>
 	</footer>
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-3.7.1.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="/static/non_auth_static/js/login.js"></script>
 </body>
 
